@@ -1,6 +1,9 @@
 
   - Fix running tests with non-UTF8 server_encoding
     (Github issue #26)
+  - Fix crash with missing client_encoding
+    (Github issue #29)
+    [David Christensen, reported by Marko Tiikkaja]
 
 Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)
 
